# nvim-treesitter-textobjects-tests

./: .gitattributes  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: consistency_tests.yml  style.yml  tests.yml
lua/: treesitter_init.lua
src/nvim_communicator/: __init__.py  _version.py
tools/: auto_generate_tests.py  download_and_run_tests.sh  event_playground.py  select_python.yaml
