[build-system]
requires = ["setuptools>=42", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=nvim_communicator"
testpaths = [
    "tests",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/nvim_communicator/_version.py"
versionfile_build = "nvim_communicator/_version.py"
tag_prefix = "v"
parentdir_prefix = "nvim_communicator-"
